// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar can render 1`] = `
<DocumentFragment>
  .emotion-11 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-3 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-3 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-3 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-3 {
    width: 1170px;
  }
}

.emotion-1 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
}

@media (max-width:870px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-4 {
  color: #7a7e82 !important;
}

.emotion-4:hover {
  color: white;
}

.emotion-10 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-9 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-9 {
    padding: 50px 20px;
  }
}

.emotion-7 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="bp3-navbar emotion-11"
  >
    <div
      class="emotion-3"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
      </div>
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      />
    </div>
    <div>
      <button
        class="bp3-button emotion-5"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-4"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-10"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-6"
                  >
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar renders environment 1`] = `
<DocumentFragment>
  .emotion-16 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-1 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
}

@media (max-width:870px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-5 {
  color: #7a7e82 !important;
}

.emotion-5:hover {
  color: white;
}

.emotion-12 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-11 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-11 {
    padding: 50px 20px;
  }
}

.emotion-9 {
  display: inline-block;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-8 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-2 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  color: #49a4d5 !important;
  min-width: 0;
}

.emotion-2 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-15 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-15 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="bp3-navbar emotion-16"
  >
    <div
      class="emotion-4"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
      </div>
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-2"
        >
          DEVELOPMENT
        </span>
      </div>
    </div>
    <div>
      <button
        class="bp3-button emotion-6"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-5"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-12"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-8"
                  >
                    <span>
                      <span
                        class="emotion-2"
                      >
                        DEVELOPMENT
                      </span>
                    </span>
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-8"
        >
          <span />
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Navbar DimensionAwareNavbar DimensionAwareNavbar renders environment 2`] = `
<DocumentFragment>
  .emotion-16 {
  background-color: #29333a !important;
  padding-top: 10px !important;
  padding-bottom: 60px !important;
  position: fixed !important;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-1 {
  font-size: 13px !important;
  font-weight: 600 !important;
  position: relative;
  padding-top: 25px;
  padding-bottom: 27px;
}

@media (max-width:870px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:992px) and (max-width:1085px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

@media (min-width:1200px) and (max-width:1285px) {
  .emotion-1 {
    padding-left: 60px;
  }
}

.emotion-0 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-5 {
  color: #7a7e82 !important;
}

.emotion-5:hover {
  color: white;
}

.emotion-12 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-11 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-11 {
    padding: 50px 20px;
  }
}

.emotion-9 {
  display: inline-block;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-8 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-2 {
  font-size: 24px !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  color: #49a4d5 !important;
  min-width: 0;
}

.emotion-2 a {
  color: #cecece !important;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 a:hover {
  color: white !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-15 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-15 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="bp3-navbar emotion-16"
  >
    <div
      class="emotion-4"
    >
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-0"
        >
          Misk
        </span>
      </div>
      <div
        class="bp3-navbar-group bp3-align-left bp3-dark emotion-1"
      >
        <span
          class="emotion-2"
        >
          DEVELOPMENT
        </span>
      </div>
    </div>
    <div>
      <button
        class="bp3-button emotion-6"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon bp3-icon-menu emotion-5"
            icon="menu"
          >
            <svg
              data-icon="menu"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                menu
              </desc>
              <path
                d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="emotion-12"
      >
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="true"
            class="bp3-collapse-body"
            style="transform: translateY(-0px);"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-8"
                  >
                    <span>
                      <span
                        class="emotion-2"
                      >
                        DEVELOPMENT
                      </span>
                    </span>
                    <span>
                      <span />
                    </span>
                  </div>
                </div>
                <span />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-8"
        >
          <span />
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
